<resources>
    <string name="app_name">One Rep Max</string>
    <string name="enter_weight_lifted">Enter Weight Lifted</string>
    <string name="amount">Amount</string>
    <string name="select_reps_performed">Select Reps Performed</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="reset">Reset</string>
    <string name="reset_delete">Reset to default settings and clear history</string>
    <string name="enter_one_rep_max">Enter One Rep Max</string>
    <string name="orm">ORM</string>
    <string name="reps_performed">Reps Performed</string>
    <string name="weight_lifted">Weight Lifted</string>
    <string name="set_one_rep_max">Set One Rep Max</string>
    <string name="lift_name">Lift name</string>
    <array name="reps_array">
        <item>2 Reps</item>
        <item>3 Reps</item>
        <item>4 Reps</item>
        <item>5 Reps</item>
        <item>6 Reps</item>
        <item>7 Reps</item>
        <item>8 Reps</item>
        <item>9 Reps</item>
        <item>10 Reps</item>
        <item>11 Reps</item>
        <item>12 Reps</item>
    </array>
    <array name="lifts">
        <item>Bench Press (flat)</item>
        <item>Bench Press (incline)</item>
        <item>Bench Press (decline)</item>
    </array>
</resources>
