<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:id="@+id/amountAndRepsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:baselineAligned="false"
        android:elevation="1dp"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif"
                android:nextFocusDown="@+id/editTextAmount"
                android:paddingTop="16dp"
                android:text="@string/enter_weight_lifted"
                android:textColor="@color/black700"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:hint="@string/amount"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:nextFocusUp="@+id/title"
                android:selectAllOnFocus="true"
                android:textColor="@color/black900"
                android:textSize="26sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="16dp"
                android:text="@string/select_reps_performed"
                android:textColor="@color/black700"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinnerReps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title1"
                android:layout_centerHorizontal="true"
                android:entries="@array/reps_array"
                android:gravity="center_horizontal" />
        </RelativeLayout>
    </LinearLayout>

    <h.eugene.com.onerepmax.util.ListView
        android:id="@+id/listMaxWeights"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/amountAndRepsHolder"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        android:scrollbars="none" />
</RelativeLayout>
