<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="h.eugene.com.onerepmax.SettingsActivity"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible"
            app:titleMarginStart="16dp" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/changeUnits"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:text="@string/units"
                android:textColor="@color/black900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textCurrentUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:textColor="@color/black700"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/black400" />

        <LinearLayout
            android:id="@+id/clearHistory"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:text="@string/reset"
                android:textColor="@color/black900"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dp"
                android:text="@string/reset_delete"
                android:textColor="@color/black700"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
