<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="h.eugene.com.onerepmax.SaveLiftActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="h.eugene.com.onerepmax.SaveLiftActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:paddingTop="16dp"
                        android:text="@string/weight_lifted"
                        android:textColor="@color/black800"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/editTextAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="26sp" />
                </RelativeLayout>

                <View
                    android:layout_width=".5dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="#eee" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:paddingTop="16dp"
                        android:text="@string/reps_performed"
                        android:textColor="@color/black800"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/amountReps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title1"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="26sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#eee" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:paddingTop="16dp"
                    android:text="@string/set_one_rep_max"
                    android:textColor="@color/black800"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/orm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title2"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="Select lift"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="48dp"
                android:background="#eee" />

            <ImageView
                android:id="@+id/addLift"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="12dp"
                android:src="@drawable/ic_add_circle_outline_24dp"
                android:tint="@color/colorAccent" />
        </LinearLayout>

        <ListView
            android:id="@+id/listSavedLifts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="Save Lift"
        android:textColor="@color/white" />
</RelativeLayout>